BE:update health endpoints and api contract
